<resources>
    <string name="app_name">reYAMF</string>
    <string name="details">Details</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="activated">Module Is Activated!</string>
    <string name="need_reboot">Version change, reboot required</string>
    <string name="not_activated">Module is not activated.</string>
    <string name="need_reboot_message">Existing windows are fine\nBut new window may make system crash</string>
    <string name="reboot">Reboot</string>
    <string name="settings">Settings</string>
    <string name="open_count">Open Count</string>
    <string name="new_window">New window</string>
    <string name="open_app_list">Open app list</string>
    <string name="telegram_channel">Telegram channel</string>
    <string name="donate">donate</string>
    <string name="back_desc">back</string>
    <string name="minimize_desc">minimize</string>
    <string name="resize_desc">resize window</string>
    <string name="fullscreen_desc">maximize</string>
    <string name="close_desc">close</string>
    <string name="xposeddescription">Freeform window for AOSP-like systems</string>
    <string name="info_system_version">System version</string>
    <string name="open_with_yamf">Freeform</string>
    <string name="enter_window">enter window</string>
    <string name="build_type">Build Type</string>
    <string name="reset_all_window">reset all window</string>
    <string name="window_size_separator">x</string>
    <string name="default_window_size_text">Default Window Size</string>
    <string name="ime_switch_text">Show IME in window\nVIRTUAL_DISPLAY_FLAG_PUBLIC must be true</string>
    <string name="keep_alive_service_text">Keeps YAMF^2 alive in the background</string>
    <string name="collapsed_app_icon">app icon for collapsed view</string>
    <string name="wow_nsuch_empty">Wow! \nSuch empty</string>
    <string name="enable_sidebar">Enable Sidebar</string>
    <string name="launch_at_startup">Launch at startup</string>
    <string name="note">Note :</string>
    <string name="note_content"><b>IF YOU CAN\'T ACCEPT ANY APP PERMISSION REQUEST.</b> That\'s because the sidebar is overlaying the screen.</string>
    <string name="close_butt_desc">Close the sidebar using this button on the sidebar</string>
    <string name="restart_butt_desc">Or use this button to close sidebar for 5 seconds. Sidebar will reappaer automatically</string>
    <string name="reyamf">reYAMF</string>
    <string name="a_yamf_fork">a YAMF fork</string>
    <string name="view_type">View Type</string>
    <string name="dpi_density">DPI Density</string>
    <string name="flags">Flags</string>
    <string name="colored_controller">Colored Controller</string>
    <string name="launch_method">Launch Method</string>
    <string name="recents_back_home">Recents Back Home</string>
    <string name="recents_app_icon_hook">Recents App Icon Hook</string>
    <string name="taskbar_hook">Taskbar Hook</string>
    <string name="app_long_press_hook">App Long Press Hook</string>
    <string name="transient_taskbar_hook">Transient Taskbar Hook</string>
    <string name="use_app_list">Use App List</string>
    <string name="force_show_ime">Force Show IME</string>
    <string name="launcher_might_need_to_be_restarted_twice_for_hooks_to_take_effect">* Launcher might need to be restarted twice for hooks to take effect</string>
    <string name="current_to_window">Current to window</string>
    <string name="launch_sidebar">Launch sidebar</string>
    <string name="reduce_dpi">Reduce DPI</string>
    <string name="sidebar_transparency">Sidebar Transparency</string>
    <string name="_80">80</string>
    <string name="window_rounded_corner">Window Rounded Corner</string>
    <string name="_20">20</string>
</resources>