<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/new_window"
        android:title="@string/new_window"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_app_list"
        android:title="@string/open_app_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/current_to_window"
        android:title="@string/current_to_window"
        app:showAsAction="never" />
    <item
        android:id="@+id/channel"
        android:title="@string/telegram_channel"
        app:showAsAction="never" />
    <item
        android:id="@+id/github"
        android:title="GitHub"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/donate"
        android:title="@string/donate"
        app:showAsAction="never" />
</menu>