<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/m3_appbar_expanded_title_margin_horizontal"
        android:paddingVertical="?dialogPreferredPadding"
        tools:ignore="PrivateResource">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_status"
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="?colorPrimary"
            android:outlineSpotShadowColor="?colorPrimary"
            android:stateListAnimator="@null"
            app:cardBackgroundColor="?colorPrimary"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="?dialogPreferredPadding">

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_round_check_circle_24"
                    app:tint="?colorOnPrimary"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_toEndOf="@id/iv_icon"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?textAppearanceTitleMedium"
                    android:textColor="?colorOnPrimary"
                    android:textSize="16sp"
                    tools:text="Magisk: activated" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_active"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/iv_icon"
                    android:textAppearance="?textAppearanceBodyMedium"
                    android:textColor="?colorOnPrimary"
                    tools:text="1.2.3" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="?dialogPreferredPadding">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/DeviceInfoDialogLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_count" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_openCount"
                    style="@style/DeviceInfoDialogValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-1" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/DeviceInfoDialogLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_system_version" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/system_version"
                    style="@style/DeviceInfoDialogValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/window_app" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_desc"
                    app:drawableStartCompat="@drawable/ic_arrow_back_24"
                    app:drawableTint="?colorOnBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotate_desc"
                    app:drawableStartCompat="@drawable/ic_screen_rotation_alt_24"
                    app:drawableTint="?colorOnBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullscreen_desc"
                    app:drawableStartCompat="@drawable/ic_fullscreen_24"
                    app:drawableTint="?colorOnBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_desc"
                    app:drawableStartCompat="@drawable/ic_close_24"
                    app:drawableTint="?colorOnBackground" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
